// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyMenuNav/N 1`] = `
<div
  class="MyMenuNav"
  data-display-nav="N"
>
  <div>
    ABC
  </div>
  <div>
    ABC
  </div>
</div>
`;

exports[`MyMenuNav/Y 1`] = `
<div
  class="MyMenuNav"
  data-display-nav="Y"
>
  <div>
    ABC
  </div>
  <div>
    ABC
  </div>
</div>
`;
